--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>1111111111111111</div>
+    <div class="box">1111111111111111</div>
 </body>
 </html>
